# signa-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.agent  Makefile  Procfile  README.md  pyproject.toml  pytest.ini  requirements.txt  socket_design.cad.py  start-ngrok.ps1
app/: config.py  constants.py  intake_instructions.py  main.py
app/agent/: intake.py
app/core/: env.py  logging_config.py  mesh_errors.py  paths.py
app/data/: datos_reporte.json  geometry_analysis_example.json  reporte.py
app/prompts/: socket_design_system.md
app/routers/: escaneo.py  livekit.py  models.py
app/routes/: convert.py  socket.py
app/schemas/: geometry.py  socket_design.py
app/services/: clinical_preferences.py  gemini_socket_agent.py  livekit.py  llm_client.py  mesh_analyzer.py  mesh_cleaner.py  mesh_convert.py  openai_socket_agent.py  s3.py  socket_cad_service.py  socket_design_agent.py  socket_design_merge.py  socket_pipeline.py
docs/: PIPELINE.md
output/socket_design/: socket.step  socket.stl  socket_design.cad.py  socket_design_report.json
scripts/: generate_sample_geometry.py  stl_to_ply.py
tests/: test_gemini_socket_normalize.py  test_openai_socket_normalize.py  test_services.py  test_socket_generate_agent.py
