[project]
name = "signa"
version = "2.0.0"
description = "Signa API — FastAPI service for report data, scan uploads, and socket generation"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.0",
    "cadquery>=2.4.0",
    "fastapi>=0.115.0",
    "google-genai>=1.0.0",
    "livekit-agents[google]>=1.5.12",
    "livekit-api>=1.1.0",
    "networkx>=3.0",
    "numpy>=1.26.0",
    "open3d>=0.18.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "rtree>=1.0.0",
    "scipy>=1.11.0",
    "shapely>=2.0.0",
    "trimesh>=4.0.0",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "integration: tests that require CadQuery or heavy dependencies",
]
